# whisperlite

./: .gitignore  LICENSE  Makefile  README.md  SETUP_GUIDE.md  build.sh  requirements.txt  setup_agile_github.sh  setup_whisperlite.sh
.github/workflows/: release.yml
cli_tests/: test_cli_transcribe.sh
docs/: ARCHITECTURE.md  BUILD_INSTALL.md  CONTRIBUTING.md  DEBUGGING_GUIDE.md  DEV_SETUP.md  FUNCTIONAL_SPEC.md  MILESTONE_3_PLAN.md  PACKAGING_GUIDE.md  PLAN_20250701.md  PLATFORM_MATRIX.md  PRODUCT_REQUIREMENTS.md  SECURITY_PRIVACY.md  TAURI_IMPLEMENTATION.md  TESTING.md  TEST_PLAN.md
rust/: Cargo.toml  tauri.conf.json
rust/src/: main.rs
rust/tests/: basic.rs  integration_test.rs
src/: audio_capture.py  display.py  main.py  output_writer.py  transcriber.py  transcript_buffer.py  ui_controller.py
tests/: test_audio_capture.py  test_cli_main.py  test_display.py  test_output_writer.py  test_transcriber.py  test_transcript_buffer.py  test_ui_controller.py
ui/: index.html  script.js  styles.css
