[package]
name = "whisperlite"
version = "0.1.0"
edition = "2021"
authors = ["WhisperLite Contributors"]
description = "Offline speech-to-text engine"
license = "MIT"

[dependencies]
cpal = "0.15"
crossbeam-channel = "0.5"
whisper-rs = { version = "0.8", optional = true }
dirs = "5.0"
anyhow = "1.0"
parking_lot = "0.12"

[features]
default = []
ffiwrapper = ["whisper-rs"]


[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies.tauri]
version = "1.5"
features = ["shell-open", "process-all", "dialog-all", "fs-all", "path-all", "protocol-all", "window-all", "cli"]
